[package]
name = "ritc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {}
reqwest = {features = ["blocking","json"] }

[[example]]
name = "algo1"
path = "examples/algo1.rs"

[[example]]
name = "mm"
path = "examples/mm.rs"
