[package]
name = "ritc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
reqwest = {version ="0.11.23", features = ["blocking","json"] }
tokio = {version ="1.35.1", features = ["full"] }

[[example]]
name = "algo1"
path = "examples/algo1.rs"

[[example]]
name = "mm"
path = "examples/mm.rs"
